--- a/inventory.ini
+++ b/inventory.ini
@@ -1,2 +1,8 @@
 [demo_servers]
 localhost ansible_connection=local
+
+[demo_servers:vars]
+http_port=80
+server_admin_email=admin@example.com
+document_root=/var/www/html
+
